# EvE-Explorer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
eve_explorer/: CMakeLists.txt  message.h  resources.qrc
eve_explorer/backend/: CMakeLists.txt
eve_explorer/backend/include/eve_explorer/: common_types.h  ieve_universe_database.h  point.h  solar_system.h  sqlite_eve_universe_database.h
eve_explorer/backend/src/: main.cc  sqlite_eve_universe_database.cc
eve_explorer/include/eve_explorer/: colors.h  common_types.h  ieve_universe_database.h  point.h  solar_system.h  sqlite_eve_universe_database.h  stargate.h
eve_explorer/include/eve_explorer_qml_integration/: vector_integration.h
eve_explorer/qml/: line.qml  main.qml  mapSolarSystemObject.qml
eve_explorer/src/: CMakeLists.txt  main.cc  sqlite_eve_universe_database.cc
eve_explorer/src/core/: CMakeLists.txt
eve_explorer/src/database/: CMakeLists.txt  ieve_universe_database.h  sqlite_eve_universe_database.cc  sqlite_eve_universe_database.h
eve_explorer/src/types/: CMakeLists.txt  common_types.h  point.cc  point.h  solar_system.cc  solar_system.h  stargate.cc  stargate.h
eve_explorer/src/utilities/: CMakeLists.txt  colors.h
